# STFFoam

./: .gitignore  .nvimrc  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/solvers/: CMakeLists.txt
applications/solvers/STFDriftFluxFoam/: CMakeLists.txt  UEqn.H  driftFluxFoam.C
applications/solvers/STFInterFoam/: CMakeLists.txt  UEqn.H  interFoam.C
applications/solvers/STFPimpleFoam/: CMakeLists.txt  UEqn.H  pEqn.H  pimpleFoam.C
applications/utils/: CMakeLists.txt
applications/utils/initBubble/: .vimrc  CMakeLists.txt  createFields.H  initBubble.C
run/bubble/: .gitignore  README.md  bubble_terminal_velocity.py  eo_study.py
run/bubble/template/: Allrun  foam.sub
run/bubble/template/0.org/: U  alpha.air  alpha1  p_rgh
run/bubble/template/constant/: STFProperties  g  transportProperties
run/bubble/template/system/: blockMeshDict  blockMeshDict.cfg  controlDict  decomposeParDict  decomposeParDict.sHM  funkySetFieldsDict  fvSchemes  fvSolution  refineMeshDict  setBubbleDict  setFieldsDict  snappyHexMeshDict  topoSetDict
run/sphere/: re_study.py  stokes_terminal_velocity.py
run/sphere/U0.1/0/: U  p
run/sphere/U0.1/constant/: turbulenceProperties
run/sphere/U0.1/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
run/sphere/template/: .gitignore
run/sphere/template/0/: U
run/sphere/template/constant/: STFProperties  fvOptions  transportProperties
run/sphere/template/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
src/: CMakeLists.txt  STFScouringInflowVelocityFvPatchVectorField.C  STFScouringInflowVelocityFvPatchVectorField.H  blankPig.C  blankPig.H  bypassPig.C  bypassPig.H  centreOfVolume.C  centreOfVolume.H  constantTranslation.C  constantTranslation.H  fallingObject.C  fallingObject.H  frameAwareBoundary.C  frameAwareBoundary.H  nonInertialFrame.C  nonInertialFrame.H  nonInertialFrameTemplates.C  translatingFixedVelocityFvPatchField.C  translatingFixedVelocityFvPatchField.H  translationalFrame.C  translationalFrame.H  uniformFixedVelocityFvPatchField.C  uniformFixedVelocityFvPatchField.H
